* Updated icon font (added close-small icon) * Fixed image overlapping in material views by adding max-width to all images under section element * Updated delete dialog close icon

--- a/muikku-assets/icon-fonts/icomoon.io/style.css
+++ b/muikku-assets/icon-fonts/icomoon.io/style.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'muikku';
-	src:url('fonts/muikku.eot?i60vxa');
-	src:url('fonts/muikku.eot?#iefixi60vxa') format('embedded-opentype'),
-		url('fonts/muikku.woff?i60vxa') format('woff'),
-		url('fonts/muikku.ttf?i60vxa') format('truetype'),
-		url('fonts/muikku.svg?i60vxa#muikku') format('svg');
+	src:url('fonts/muikku.eot?-8dwy8c');
+	src:url('fonts/muikku.eot?#iefix-8dwy8c') format('embedded-opentype'),
+		url('fonts/muikku.woff?-8dwy8c') format('woff'),
+		url('fonts/muikku.ttf?-8dwy8c') format('truetype'),
+		url('fonts/muikku.svg?-8dwy8c#muikku') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -23,6 +23,9 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.icon-close-small:before {
+	content: "\e63b";
+}
 .icon-add:before {
 	content: "\e114";
 }
