--- a/muikku/src/main/webapp/resources/theme-muikku/sass/workspaces-materials-management.scss
+++ b/muikku/src/main/webapp/resources/theme-muikku/sass/workspaces-materials-management.scss
@@ -353,6 +353,10 @@ body.workspace-materials-management {
       -ms-transition: box-shadow,opacity 0.3s,0.5s ease-in-out,ease-in-out;
       transition: box-shadow,opacity 0.3s,0.5s ease-in-out,ease-in-out;
       
+      img {
+        max-width:100%;
+      }
+      
       &.page-hidden {
         opacity:0.4;
       }
@@ -480,6 +484,7 @@ body.workspace-materials-management {
         margin:0;
         font-size:1.15em;
         width:100%;
+        font-weight:300;
       }
       
       .ui-dialog-titlebar-close {
@@ -487,9 +492,12 @@ body.workspace-materials-management {
         border-radius:0px;
         border:0px;
         width:24px;
+        margin:-13px 0 0 0;
+        font-size:1.3em;
+        height:1.3em; /* Same height as font-size */
         
         &:before {
-          content: "\e604";
+          content: "\e63b";
           color:#fff;
           font-size:1.1em;
           font-weight:normal;
